<resources>
    <string name="app_name">TestGame</string>
    <string name="title_high_score">High score:</string>
    <string name="btn_new_game">New Game</string>
    <string name="btn_reset_score">Reset score</string>
    <string name="btn_exit">Exit</string>
    <string name="rest_score_success">Score successfully reset</string>
    <string name="current_score">Current score:</string>
    <string name="btn_restart">Restart</string>
</resources>