<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="10"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:orientation="vertical"
                    android:gravity="center_vertical|center">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_high_score"
                            android:textSize="20sp"/>
                    <TextView
                            android:id="@+id/high_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_margin_top"
                            android:textSize="20sp"
                            android:text="0"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/current_score"
                            android:textSize="20sp"
                            android:layout_marginTop="@dimen/layout_margin_top"/>
                    <TextView
                            android:id="@+id/current_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_margin_top"
                            android:textSize="20sp"
                            android:text="0"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:gravity="center_vertical|center">
                    <Button
                            android:id="@+id/btn_restart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_restart"/>
            </LinearLayout>
        </LinearLayout>
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
            <com.example.testgame.view.TetrisView
                    android:id="@+id/tetris_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>